--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "lint": "ng lint",
         "e2e": "ng e2e",
         "postinstall": "ng build --aot -prod",
-        "start": "node server.js"
+        "start": "node server.js",
+        "deploy": "git push heroku master && git push origin master"
     },
     "engines": {
         "node": "8.9.4",
